tests compile but are wrong
Signed-off-by: Philippe Edwards <philippe.edwards@rte-france.com>