@@ -9,6 +9,7 @@ package com.powsybl.openrao.searchtreerao.searchtree.algorithms;
 import com.powsybl.openrao.data.cracapi.networkaction.NetworkAction;
 import com.powsybl.openrao.data.cracapi.rangeaction.PstRangeAction;
 import com.powsybl.openrao.searchtreerao.commons.NetworkActionCombination;
+import com.powsybl.openrao.searchtreerao.result.api.OptimizationResult;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 
@@ -28,7 +29,6 @@ import static com.powsybl.openrao.searchtreerao.searchtree.algorithms.NetworkAct
 import static com.powsybl.openrao.searchtreerao.searchtree.algorithms.NetworkActionCombinationsUtils.IND_FR_DE;
 import static com.powsybl.openrao.searchtreerao.searchtree.algorithms.NetworkActionCombinationsUtils.IND_NL_1;
 import static com.powsybl.openrao.searchtreerao.searchtree.algorithms.NetworkActionCombinationsUtils.NA_FR_1;
-import static com.powsybl.openrao.searchtreerao.searchtree.algorithms.NetworkActionCombinationsUtils.P_STATE;
 import static com.powsybl.openrao.searchtreerao.searchtree.algorithms.NetworkActionCombinationsUtils.RA_BE_1;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
@@ -45,10 +45,10 @@ class MaximumNumberOfRemedialActionPerTsoFilterTest {
 
         // arrange Leaf -> naFr1 and raBe1 have already been activated in previous leaf
         // but only naFr1 should count
-        Leaf previousLeaf = Mockito.mock(Leaf.class);
-        Mockito.when(previousLeaf.getActivatedNetworkActions()).thenReturn(Collections.singleton(NA_FR_1));
-        Mockito.when(previousLeaf.getRangeActions()).thenReturn(Collections.singleton(RA_BE_1));
-        Mockito.when(previousLeaf.getOptimizedSetpoint(RA_BE_1, P_STATE)).thenReturn(5.);
+        OptimizationResult previousLeafResult = Mockito.mock(OptimizationResult.class);
+        Mockito.when(previousLeafResult.getActivatedNetworkActions()).thenReturn(Collections.singleton(NA_FR_1));
+        Mockito.when(previousLeafResult.getRangeActions()).thenReturn(Collections.singleton(RA_BE_1));
+        Mockito.when(previousLeafResult.getOptimizedSetpoint(RA_BE_1)).thenReturn(5.);
 
         MaximumNumberOfRemedialActionPerTsoFilter naFilter;
         Set<NetworkActionCombination> filteredNaCombination;
@@ -56,7 +56,7 @@ class MaximumNumberOfRemedialActionPerTsoFilterTest {
         // filter - max 2 topo in FR and DE
         Map<String, Integer> maxTopoPerTso = Map.of("fr", 2, "be", 2);
         naFilter = new MaximumNumberOfRemedialActionPerTsoFilter(maxTopoPerTso, new HashMap<>());
-        filteredNaCombination = naFilter.filter(naCombinations, previousLeaf);
+        filteredNaCombination = naFilter.filter(naCombinations, previousLeafResult);
 
         assertEquals(6, filteredNaCombination.size()); // 2 combinations filtered
         assertFalse(filteredNaCombination.contains(COMB_2_FR));
@@ -65,7 +65,7 @@ class MaximumNumberOfRemedialActionPerTsoFilterTest {
         // filter - max 1 topo in FR
         maxTopoPerTso = Map.of("fr", 1);
         naFilter = new MaximumNumberOfRemedialActionPerTsoFilter(maxTopoPerTso, new HashMap<>());
-        filteredNaCombination = naFilter.filter(naCombinations, previousLeaf);
+        filteredNaCombination = naFilter.filter(naCombinations, previousLeafResult);
 
         assertEquals(4, filteredNaCombination.size()); // 4 combinations filtered
         assertTrue(filteredNaCombination.contains(IND_BE_2));
@@ -76,7 +76,7 @@ class MaximumNumberOfRemedialActionPerTsoFilterTest {
         // filter - max 1 RA in FR and max 2 RA in BE
         Map<String, Integer> maxRaPerTso = Map.of("fr", 1, "be", 2);
         naFilter = new MaximumNumberOfRemedialActionPerTsoFilter(new HashMap<>(), maxRaPerTso);
-        filteredNaCombination = naFilter.filter(naCombinations, previousLeaf);
+        filteredNaCombination = naFilter.filter(naCombinations, previousLeafResult);
 
         assertEquals(3, filteredNaCombination.size());
         assertTrue(filteredNaCombination.contains(IND_BE_2));
@@ -87,7 +87,7 @@ class MaximumNumberOfRemedialActionPerTsoFilterTest {
         maxTopoPerTso = Map.of("fr", 2, "nl", 0);
         maxRaPerTso = Map.of("be", 1);
         naFilter = new MaximumNumberOfRemedialActionPerTsoFilter(maxTopoPerTso, maxRaPerTso);
-        filteredNaCombination = naFilter.filter(naCombinations, previousLeaf);
+        filteredNaCombination = naFilter.filter(naCombinations, previousLeafResult);
 
         assertEquals(3, filteredNaCombination.size());
         assertTrue(filteredNaCombination.contains(IND_FR_2));
@@ -98,7 +98,7 @@ class MaximumNumberOfRemedialActionPerTsoFilterTest {
         maxTopoPerTso = Map.of("fr", 10, "nl", 10, "be", 10);
         maxRaPerTso = Map.of("nl", 0);
         naFilter = new MaximumNumberOfRemedialActionPerTsoFilter(maxTopoPerTso, maxRaPerTso);
-        filteredNaCombination = naFilter.filter(naCombinations, previousLeaf);
+        filteredNaCombination = naFilter.filter(naCombinations, previousLeafResult);
 
         assertEquals(5, filteredNaCombination.size());
         assertFalse(filteredNaCombination.contains(IND_NL_1));
@@ -128,17 +128,17 @@ class MaximumNumberOfRemedialActionPerTsoFilterTest {
         PstRangeAction raFr1 = createPstRangeActionWithOperator("lineFr1", "fr");
         PstRangeAction raFr2 = createPstRangeActionWithOperator("lineFr2", "fr");
 
-        Leaf previousLeaf = Mockito.mock(Leaf.class);
-        Mockito.when(previousLeaf.getActivatedNetworkActions()).thenReturn(Collections.emptySet());
-        Mockito.when(previousLeaf.getActivatedRangeActions(Mockito.any())).thenReturn(Set.of(raFr1, raFr2));
-        Mockito.when(previousLeaf.getOptimizedSetpoint(raFr1, P_STATE)).thenReturn(5.);
-        Mockito.when(previousLeaf.getOptimizedSetpoint(raFr2, P_STATE)).thenReturn(5.);
+        OptimizationResult previousLeafResult = Mockito.mock(OptimizationResult.class);
+        Mockito.when(previousLeafResult.getActivatedNetworkActions()).thenReturn(Collections.emptySet());
+        Mockito.when(previousLeafResult.getActivatedRangeActions()).thenReturn(Set.of(raFr1, raFr2));
+        Mockito.when(previousLeafResult.getOptimizedSetpoint(raFr1)).thenReturn(5.);
+        Mockito.when(previousLeafResult.getOptimizedSetpoint(raFr2)).thenReturn(5.);
 
         Map<String, Integer> maxTopoPerTso = Map.of("fr", 2, "nl", 2);
         Map<String, Integer> maxRemedialActionsPerTso = Map.of("fr", 2, "nl", 5);
 
         MaximumNumberOfRemedialActionPerTsoFilter naFilter = new MaximumNumberOfRemedialActionPerTsoFilter(maxTopoPerTso, maxRemedialActionsPerTso);
-        Set<NetworkActionCombination> filteredNaCombination = naFilter.filter(naCombinations, previousLeaf);
+        Set<NetworkActionCombination> filteredNaCombination = naFilter.filter(naCombinations, previousLeafResult);
         assertEquals(0, filteredNaCombination.size()); // combination is filtered out
     }
 }
